Fix z-index issue with newsroom loading indicator

--- a/app/assets/stylesheets/admin/newsroom.css.scss
+++ b/app/assets/stylesheets/admin/newsroom.css.scss
@@ -40,6 +40,8 @@ ul.small {
 
 .viewers {
   min-height: 100px;
+  z-index: 1;
+  position: relative;
   &> ul {
     margin-left: 0;
     list-style: none;
